apps/workload/overlays/qa/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: logbeacon-gateway
  namespace: logbeacon

spec:
  listeners:
    - name: https
      hostname: "*.qa.aws-logbeacon.iamridoydey.me"
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate
        certificateRefs:
          - name: logbeacon-tls

      allowedRoutes:
        namespaces:
          from: Same

    - name: https-root
      hostname: "qa.aws-logbeacon.iamridoydey.me"
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate
        certificateRefs:
          - name: logbeacon-tls

      allowedRoutes:
        namespaces:
          from: Same
