apps/workload/overlays/qa/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: logbeacon-frontend
  namespace: logbeacon

spec:
  parentRefs:
    - name: logbeacon-gateway
      sectionName: https-root

  hostnames:
    - qa.aws-logbeacon.iamridoydey.me

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: logbeacon-frontend-stable
          port: 3000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: logbeacon-backend
  namespace: logbeacon

spec:
  parentRefs:
    - name: logbeacon-gateway
      sectionName: https

  hostnames:
    - api.qa.aws-logbeacon.iamridoydey.me

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: logbeacon-backend-stable
          port: 5000
